--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
@@ -10,11 +11,12 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Parte02_SintaxeBasica/FormacaoNETDeveloper/bin/Debug/net8.0/FormacaoNETDeveloper.dll",
+            "program": "${workspaceFolder}/Parte02_SintaxeBasica/ExemploFundamentos/bin/Debug/net8.0/ExemploFundamentos.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Parte02_SintaxeBasica/FormacaoNETDeveloper",
+            "cwd": "${workspaceFolder}/Parte02_SintaxeBasica/ExemploFundamentos",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "internalConsole",
+            "console": "integratedTerminal",
+            "brokeredServicePipeName": "undefined", //erro no debug, pesquisa no google para resolver problema > linha acrescentada
             "stopAtEntry": false
         },
         {
